# UltimateGymWue

./: .travis.yml  README.md
.github/: config.yml
UGWBackend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  ci-build.sh  docker-compose.yml  install.sh
UGWBackend/db-middleware/: Dockerfile  index.js  kurse.js  package-lock.json  package.json  vp.js
UGWBackend/k8s/: k8s-deploy.sh  k8s-deploy.yml  k8s-first-deploy.sh
UGWBackend/push-service/: Dockerfile  README.md  package-lock.json  package.json
UGWBackend/push-service/__tests__/: main.spec.ts  util.spec.ts
UGWBackend/push-service/coverage/: clover.xml  coverage-final.json  lcov.info
UGWBackend/push-service/coverage/lcov-report/: index.html  main.ts.html  util.ts.html
UGWBackend/push-service/src/: main.ts  util.ts
UGWBackend/src/: catcher.rs  db.rs  main.rs  redismw.rs  responses.rs
UGWBackend/src/auth/: close_account.rs  guards.rs  jwt.rs  mod.rs  regexes.rs
UGWBackend/src/auth/google/login/: handler.rs
UGWBackend/src/auth/google/register/: handler.rs
UGWBackend/src/auth/insta/: login.rs  register.rs
UGWBackend/src/auth/normal/: email.rs  mod.rs  normal.rs  passw.rs
UGWBackend/src/basics/: creds.rs  guards.rs  kurse.rs  mod.rs  set.rs  stufen.rs  stundenplan.rs  utils.rs  vertretungsplan.rs
UGWBackend/src/basics/notifications/: collect_subscription.rs  get_vd_diff.rs  mod.rs
UGWBackend/src/events/: add_event.rs  mod.rs  month.rs
UGWFrontend/: .firebaserc  .gitignore  README.md  angular.json  ci-build.sh  firebase.json  package-lock.json  package.json
docs/: ugw-router.xml
(+237 files in other folders)
