[package]
name = "UGWBackend"
version = "0.1.0"
authors = ["FoseFx <fosefx@pm.me>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rust-crypto = "0.2.36"
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]