[package]
name = "ugw-backend"
version = "0.1.0"
authors = ["FoseFx <fosefx@pm.me>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rust-crypto = "0.2.36"
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.1.5"
reqwest = "0.9.14"
base64 = "0.10.1"
redis = "0.10.0"
r2d2 = "*"
r2d2_redis = "*"
jsonwebtoken = "5.0.1"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]